syntax = "proto3";

package edu.imau.pb;
option go_package = ".;pb";

service UserService {
  rpc GetUserById(UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
}